--- a/multiplepackegesatatime.yaml
+++ b/multiplepackegesatatime.yaml
@@ -1,8 +1,7 @@
-- name: Install packages
-  become: yes
-  packages:
-    name:
-      - httpd
-      - ssh
-      - ftp
+- name: install php7.2 from a .deb on the internet
+  apt:
+    deb: http://security.ubuntu.com/ubuntu/pool/main/p/php7.2/php7.2_7.2.10-0ubuntu0.18.04.1_all.deb
     state: present
+  become: true
+  register: apt_output
+  when: ansible_os_family == 'Debian'
