--- a/multiplepackegesatatime.yaml
+++ b/multiplepackegesatatime.yaml
@@ -1,5 +1,12 @@
-- name: Install a list of packages
-  ansible.builtin.:
-    pkg:
-    - foo
-    - foo-tools
+- name: package installation on hosts
+  hosts: all
+  become: yes
+  tasks: 
+    - name: install packages
+      ansible.builtin.package:
+        name: 
+          - nginx
+          - apache2
+          - mariadb-server
+          - tree
+        state: present
