--- a/multiplepackegesatatime.yaml
+++ b/multiplepackegesatatime.yaml
@@ -4,8 +4,5 @@
   tasks: 
     - name: install packages
       ansible.builtin.package:
-        name: 
-          - nginx
-          - apache2
-          - tree
+        name: apache2
         state: present
