--- a/multiplepackegesatatime.yaml
+++ b/multiplepackegesatatime.yaml
@@ -4,5 +4,9 @@
   tasks: 
     - name: install packages
       ansible.builtin.package:
-        name: apache2
+        name: 
+          - nginx
+          - apache2
+          - mariadb-server
+          - tree
         state: present
