--- a/multiplepackegesatatime.yaml
+++ b/multiplepackegesatatime.yaml
@@ -1,10 +1,12 @@
 - name: package installation on hosts
   hosts: all
   become: yes
-  tasks: 
+  tasks:
     - name: install packages
       ansible.builtin.package:
-        name: 
+        name:
           - nginx
           - apache2
-        state: absent
+          - mariadb-server
+          - tree
+        state: present
