--- a/varsfix.yaml
+++ b/varsfix.yaml
@@ -1,15 +1,16 @@
 - name: Registering vars
-hosts: all
-vars: 
-  url: www.global.com
-tasks:
-
- - name: task1
-  debug: "value of variable is {{url}}" 
+  hosts: all
+  vars: 
+    url: www.global.com
+   
+   tasks:
+    - name: task1
+      debug:
+        msg: "value of variable is {{url}}" 
   vars: 
     url: www.local.com
 
-    
+
 - name: 
   debug:
     msg: "the value variablke is {{url}}"
