--- a/web.yaml
+++ b/web.yaml
@@ -1,16 +1,29 @@
-- name: web deployment
+- name: hosting webpage on apache server
   hosts: all
   become: yes
   tasks: 
-    - name: apache2 installation
-      apt: 
-      - name: apache2
+    - name: installing required services
+      package:
+        name:
+          - apache2
+          - wget
+          - unzip
         state: present
-     
 
-  tasks:
-  
-  - name: copy file from one locatio to another location
-      ansible.builtin.copy:
-        src: /root/index.html
-        dest: /var/www/html
+    - name: downloading template
+      shell: wget https://www.free-css.com/assets/files/free-css-templates/download/page287/dicet-tv.zip
+      
+    
+    - name: extracting template in same directory
+      unarchive: 
+        src: /home/ubuntu/cycle.zip
+        dest: /home/ubuntu
+        remote_src: yes
+    
+    - name: Removing existing index.html file from root directory of apache
+      file:
+        path: /var/www/html/index.html
+        state: absent
+    
+    - name: moving extracted template files to root directory of apache 
+      shell: cp -r /home/ubuntu/html/* /var/www/html
