--- a/nginx1.yaml
+++ b/nginx1.yaml
@@ -13,8 +13,8 @@
       shell: wget https://www.free-css.com/assets/files/free-css-templates/download/page287/cycle.zip
     - name: extract zip file
       unarchive: 
-        src: /home/ubuntu/cycle
-        dest: /home/ubuntu
+        src: /home/ubuntu/cycle.zip
+        dest: /home/ubuntu/
         remote_src: yes
 
     - name: delete indexfile
