--- a/tomcathosting.yaml
+++ b/tomcathosting.yaml
@@ -8,7 +8,7 @@
         state: present
 
     - name: download tomcat
-      get url: 
+      get_url: 
         url: https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.71/bin/apache-tomcat-9.0.71.tar.gz
         dest: /home/ubuntu
 
