--- a/mayursir.yaml
+++ b/mayursir.yaml
@@ -11,7 +11,7 @@
         - unzip
         - wget 
 
-    - name: download template
+    - name: download templat
       ansible.builtin.get_url:
         url: https://www.free-css.com/assets/files/free-css-templates/download/page287/dicet-tv.zip
         dest: /opt/
